--- a/index.html
+++ b/index.html
@@ -177,17 +177,17 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="6.jpg" class="d-block card-img" alt="First Slide">
+                <img src="images/6.jpg" class="d-block card-img" alt="First Slide">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="5.jpg" class="d-block card-img" alt="Second Slide">
+                <img src="images/5.jpg" class="d-block card-img" alt="Second Slide">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="4.jpg" class="d-block card-img" alt="Third Slide">
+                <img src="images/4.jpg" class="d-block card-img" alt="Third Slide">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
