--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/6.jpg" class="d-block card-img" alt="First Slide">
+                <img src="6.jpg" class="d-block card-img" alt="First Slide">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
